# ollama-webhooks

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.markdown  celerybeat-schedule  celerybeat-schedule-shm  compose.yaml  docker.env  manage.py  pyproject.toml  requirements.in  requirements.txt
.github/: dependabot.yml
.github/workflows/: django.yaml  docker.yaml  full-stack-test.yaml  python.yaml
ollama_webhooks/: __init__.py  apps.py  celery.py  factories.py  models.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
ollama_webhooks/migrations/: 0001_initial.py  __init__.py
ollama_webhooks/tests/: __init__.py  conftest.py  test_apps_installed.py  test_spelling.py
